--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -34,14 +34,16 @@
       </div>
     </header>
     <section id="firstSection">
-      <img class="group249" src="./images/Group 249.png" alt="" />
-      <img class="group318" src="./images/Group 318.png" alt="" />
-      <img class="svyacheniye6" src="./images/свечение (6).png" alt="" />
-      <img class="svyacheniye7" src="./images/свечение (7).png" alt="" />
-      <img class="svyacheniye8" src="./images/свечение (8).png" alt="" />
-      <img class="svyacheniye9" src="./images/свечение (9).png" alt="" />
-      <img class="svyacheniye10" src="./images/свечение (10).png" alt="" />
-      <img class="svyacheniye11" src="./images/свечение (11).png" alt="" />
+      <div class="svyacheniya">
+        <img class="group249" src="./images/Group 249.png" alt="" />
+        <img class="group318" src="./images/Group 318.png" alt="" />
+        <img class="svyacheniye6" src="./images/свечение (6).png" alt="" />
+        <img class="svyacheniye8" src="./images/свечение (8).png" alt="" />
+
+        <img class="svyacheniye10" src="./images/свечение (10).png" alt="" />
+        <img class="svyacheniye11" src="./images/свечение (11).png" alt="" />
+      </div>
+
       <div class="container cont">
         <div class="row">
           <div class="col-12">
