--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -1690,7 +1690,7 @@
         </div>
       </div>
     </section>
-    <footer class="d-flex w-100 cont justify-content-center align-items-center">
+    <footer class="d-flex justify-content-center align-items-center">
       <div class="container footStyle cont px-3 py-4">
         <div class="row">
           <div class="col-9 pe-0">
