--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -28,13 +28,15 @@
   </head>
   <body>
     <header class="d-flex justify-content-center align-items-center">
-      <div class="p-3 cont d-flex justify-content-between align-items-center">
+      <div
+        class="p-3 w-100 headDiv d-flex justify-content-between align-items-center"
+      >
         <img src="./images/лого.png" class="img-fluid" alt="" />
         <i class="fs-1 fa-sharp fa-solid fa-bars"></i>
       </div>
     </header>
     <section id="firstSection">
-      <div class="svyacheniya">
+      <!-- <div class="svyacheniya">
         <img class="group249" src="./images/Group 249.png" alt="" />
         <img class="group318" src="./images/Group 318.png" alt="" />
         <img class="svyacheniye6" src="./images/свечение (6).png" alt="" />
@@ -42,7 +44,7 @@
 
         <img class="svyacheniye10" src="./images/свечение (10).png" alt="" />
         <img class="svyacheniye11" src="./images/свечение (11).png" alt="" />
-      </div>
+      </div> -->
 
       <div class="container cont">
         <div class="row">
@@ -56,7 +58,7 @@
               <input
                 type="text"
                 placeholder="Поиск..."
-                class="text-muted border-0 w-75"
+                class="text-muted bg-transparent border-0 w-75"
               />
             </div>
           </div>
